# drone-task-4

./: CMakeLists.txt
config/: quadControlSystem.yaml
inc/: PIDController.hpp  UAVControlSystem.hpp  configLoader.hpp  math.hpp  mathModelQuadrotor.hpp  message.hpp  motionPlanner.hpp  simulator.hpp  typesData.hpp
scripts/: plotter.py  sendMessageExample.py
src/: PIDController.cpp  UAVControlSystem.cpp  configLoader.cpp  main.cpp  math.cpp  mathModelQuadrotor.cpp  motionPlanner.cpp  simulator.cpp
